Add colors, fonts, etc...

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,2 +1,8 @@
+// COLORS
+$color-white: #fff;
+$color-black: #000;
+$color-accent: #ffd014;
 
-
+// FONTS
+$font-primary: 'Exo 2', sans-serif;
+$font-secondary: 'Inter', sans-serif;
