add sections with styles: statistic,forms,achievements

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,6 +2,9 @@
 $color-white: #fff;
 $color-black: #000;
 $color-accent: #ffd014;
+$main: #ffd210;
+$neutral: #121212;
+$white: #fcfcfc;
 
 // FONTS
 $font-primary: 'Exo 2', sans-serif;
