--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,6 @@
+@import 'base/base';
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
+@import 'components/statistic';
+@import 'components/forms';
+@import 'components/achievements';
