--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -8,7 +8,7 @@
     font-weight: 700;
     font-size: 40px;
     line-height: 48px;
-    color: var(--neutral);
+    color: #121212;
   }
   &__text {
     margin-bottom: 48px;
@@ -33,11 +33,15 @@
     font-weight: 500;
     font-size: 24px;
     line-height: 29px;
-    background-color: var(--neutral);
+    background-color: $neutral;
     text-align: center;
-    border: 1.5px solid var(--neutral);
+    border: 1.5px solid #121212;
     border-radius: 4px;
     text-transform: uppercase;
     text-decoration: none;
+    &:hover {
+      background-color: #fff;
+      color: #121212;
+    }
   }
 }
