--- a/src/scss/components/_statistic.scss
+++ b/src/scss/components/_statistic.scss
@@ -1,5 +1,5 @@
 .statistic {
-  background-color: #ffd210;
+  background-color: $main;
   padding-top: 53px;
   padding-bottom: 53px;
   &__title {
@@ -8,6 +8,6 @@
     font-weight: 700;
     font-size: 32px;
     line-height: 38px;
-    color: #121212;
+    color: $neutral;
   }
 }
