--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,10 +1,16 @@
 // COLORS
-$color-white: #fff;
-$color-black: #000;
+//colors-accents
 $color-accent: #ffd014;
-$main: #ffd210;
-$neutral: #121212;
-$white: #fcfcfc;
+$color-main: #ffd210;
+
+//colors-black
+$color-black: #000;
+$color-secondary-black: #232323;
+$color-neutral: #121212;
+
+//colors-white
+$color-white: #fff;
+$color-secondary-white: #fcfcfc;
 
 // FONTS
 $font-primary: 'Exo 2', sans-serif;
