--- a/src/scss/components/_achievements.scss
+++ b/src/scss/components/_achievements.scss
@@ -1,25 +1,25 @@
 .achievements {
-  background: $main;
-  padding-top: 52px;
-  padding-bottom: 52px;
+  background: $color-main;
+  padding-top: 5.2rem;
+  padding-bottom: 5.2rem;
   &__list {
     display: flex;
-    gap: 240px;
+    gap: 24rem;
   }
   &__number {
     text-align: center;
     font-weight: 600;
-    font-size: 56px;
-    line-height: 67px;
-    color: $neutral;
-    margin-bottom: 24px;
+    font-size: 5.6rem;
+    line-height: 6.7rem;
+    color: $color-neutral;
+    margin-bottom: 2.4rem;
   }
   &__text {
     font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 2rem;
+    line-height: 2.4rem;
     text-align: center;
     text-transform: uppercase;
-    color: $neutral;
+    color: $color-neutral;
   }
 }
