--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -1,47 +1,47 @@
 .forms {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 12rem;
+  padding-bottom: 12rem;
 
   &__title {
-    margin-bottom: 24px;
+    margin-bottom: 2.4rem;
     text-align: center;
     font-weight: 700;
-    font-size: 40px;
-    line-height: 48px;
-    color: $neutral;
+    font-size: 4rem;
+    line-height: 4.8rem;
+    color: $color-neutral;
   }
   &__text {
-    margin-bottom: 48px;
+    margin-bottom: 4.8rem;
     text-align: center;
     font-weight: 400;
-    font-size: 24px;
-    line-height: 29px;
+    font-size: 2.4rem;
+    line-height: 2.9rem;
     text-align: center;
-    color: #232323;
+    color: $color-secondary-black;
   }
   &__list {
     display: flex;
-    gap: 32px;
+    gap: 3.2rem;
   }
 
   &__link {
     display: block;
-    color: #fcfcfc;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    width: 276px;
+    color: $color-secondary-white;
+    padding-top: 2.4rem;
+    padding-bottom: 2.4rem;
+    width: 27.6rem;
     font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
-    background-color: $neutral;
+    font-size: 2.4rem;
+    line-height: 2.9rem;
+    background-color: $color-neutral;
     text-align: center;
-    border: 1.5px solid $neutral;
+    border: 0.15rem solid $color-neutral;
     border-radius: 4px;
     text-transform: uppercase;
     text-decoration: none;
     &:hover {
-      background-color: #fff;
-      color: $neutral;
+      background-color: $color-white;
+      color: $color-neutral;
     }
   }
 }
