--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,8 +1,13 @@
 // COLORS
-$color-white: #fff;
-$color-black: #000;
-$color-accent: #ffd014;
+$color-white: #fcfcfc;
+$color-black: #121212;
+$color-black-light: #232323;
+$color-accent: #ffd210;
+$color-gray: #767676;
 
 // FONTS
 $font-primary: 'Exo 2', sans-serif;
 $font-secondary: 'Inter', sans-serif;
+
+// BORDERS
+$border-black: 1px solid $color-black;
