--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,8 @@
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
+
+@import 'base/typography';
+@import 'base/base';
+
+@import 'layout/header';
+@import 'layout/slider';
