--- a/src/scss/layout/_forms.scss
+++ b/src/scss/layout/_forms.scss
@@ -8,7 +8,7 @@
     font-weight: 700;
     font-size: 4rem;
     line-height: 4.8rem;
-    color: $color-neutral;
+    color: $color-black;
   }
   &__text {
     margin-bottom: 4.8rem;
@@ -17,7 +17,7 @@
     font-size: 2.4rem;
     line-height: 2.9rem;
     text-align: center;
-    color: $color-secondary-black;
+    color: $color-black;
   }
   &__list {
     display: flex;
@@ -26,22 +26,22 @@
 
   &__link {
     display: block;
-    color: $color-secondary-white;
+    color: $color-white;
     padding-top: 2.4rem;
     padding-bottom: 2.4rem;
     width: 27.6rem;
     font-weight: 500;
     font-size: 2.4rem;
     line-height: 2.9rem;
-    background-color: $color-neutral;
+    background-color: $color-black;
     text-align: center;
-    border: 0.15rem solid $color-neutral;
+    border: 0.15rem solid $color-black;
     border-radius: 4px;
     text-transform: uppercase;
     text-decoration: none;
     &:hover {
       background-color: $color-white;
-      color: $color-neutral;
+      color: $color-black;
     }
   }
 }
