--- a/src/scss/layout/_statistic.scss
+++ b/src/scss/layout/_statistic.scss
@@ -1,5 +1,5 @@
 .statistic {
-  background-color: $color-main;
+  background: url(@img/statBg.webp);
   padding-top: 5.3rem;
   padding-bottom: 5.3rem;
   &__title {
@@ -8,6 +8,6 @@
     font-weight: 700;
     font-size: 3.2rem;
     line-height: 3.8rem;
-    color: $color-neutral;
+    color: $color-black;
   }
 }
