--- a/src/scss/projectsSection/_projectsSection.scss
+++ b/src/scss/projectsSection/_projectsSection.scss
@@ -1,121 +1,94 @@
 .projects-section{
-    padding-top: 120px;
+    padding-top: 12rem;
     text-align: center;
     &__title{
         font-family: $font-primary;
         font-weight: 700;
-        font-size: 38px;
+        font-size: 3.8rem;
         line-height: 1.21052;
     }
     &__form-container{
-        padding: 32px 0;
+        padding: 3.2rem 0;
     }
     &__form-container:focus-within &__form{
         border: $border-black;
     }
     &__form-container:active &__form{
-        border: 1px solid $color-gray
+        border: $border-gray;
     }
     &__form{
         position: relative;
-        width: 378px;
-        border: 1px solid $color-gray;
-        border-radius: 4px; 
+        width: 37.8rem;
+        border: $border-gray;
+        border-radius: 0.4rem; 
         display: flex;
         justify-content: space-around;
-        // align-items: center;
         &__input{
-            padding: 18.5px 0 18.5px 0;
+            padding: 1.85rem 0 1.85rem 0;
             border: none;
             outline: none;
-            width: 306px;
+            width: 30.6rem;
             &::placeholder{
                 font-family: $font-primary;
-                font-size: 16px;
+                font-size: 1.6rem;
                 line-height: 1.1875;
             }
         }
         &__button{
             border: none;
             background: none;
-            // &:hover .projects-section__form-submit__icon{
-            //     fill: red;
-            // }
         }
-    }
-    &__form-submit{
-        background-color: #f1f1f1;
-        border: none;
-        padding: 8px;
-        cursor: pointer;
         &__icon{
-            width: 24px;
-            height: 24px;
+            width: 2.4rem;
+            height: 2.4rem;
             cursor: pointer;
             align-self: center;
-            // &:hover{
-            //     fill: red;
-            // }
         }
     }
-    // $breakpoint-phone: 320px;
-    // $breakpoint-tablet: 768px;
-    // $breakpoint-laptop: 1200px;
     &__projects-container{
         display: grid;
-        // flex-wrap: wrap;
-        gap: 32px;
+        gap: 3.2rem;
         grid-template-columns: repeat(3,1fr);
-        padding-bottom: 32px;
-        // @media (min-width: $breakpoint-phone) {
-        //         grid-template-columns: repeat(1,1fr);
-        //     }
-        // @media (min-width: $breakpoint-tablet) {
-        //     grid-template-columns: repeat(2,1fr);
-        // }
-        // @media (min-width: $breakpoint-laptop) {
-        //     grid-template-columns: repeat(3,1fr);
-        // }
+        padding-bottom: 3.2rem;
     }
     &__projects-item{
-        width: 378px;
-        height: 464px;
+        width: 37.8rem;
+        height: 46.4rem;
         color: $color-white;
         position: relative;
-        padding: 24px;
+        padding: 2.4rem;
         &__container{
             text-align: left;
         }
         &__title{
-            width: 330px;
+            width: 33rem;
             font-weight: 700;
-            font-size: 24px;
-            line-height: 24px;
+            font-size: 2.4rem;
+            line-height: 1;
             text-align: left;
             position: absolute;
-            top: 218px;
+            top: 21.8rem;
         }
         &__link{
             color: $color-white;
             text-decoration: none;
             text-align: left;
             position: absolute;
-            top: 273px;
+            top: 27.3rem;
         }
         &__state{
-            width: 20px;
-            height: 20px;
+            width: 2rem;
+            height: 2rem;
             border-radius: 50%;
-            // background: #74BE4F;
         }
         &__state-container{
-            width: 157px;
-            padding: 8px 0;
+            width: 15.7rem;
+            padding: 0.8rem 0;
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-            border: 1px solid rgba(252, 252, 252, 0.5);
-            border-radius: 4px;
+            border: $border-gray;
+            border-radius: 0.4rem;
             
         }
     }
@@ -123,47 +96,44 @@
         &__list{
             display: flex;
             position: absolute;
-            top: 313px;
+            top: 31.3rem;
             flex-direction: column;
-            gap: 8px;
+            gap: 0.8rem;
         }
         &__list-item{
-            width: 330px;
+            width: 33rem;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            // position: absolute;
-            // top: 313px;
             &__icon{
-                width: 24px;
-                height: 24px;
+                width: 2.4rem;
+                height: 2.4rem;
             }
             &__level-container{
                 display: flex;
                 flex-direction: row;
-                gap: 4px;
+                gap: 0.4rem;
             }
             &__level{
-                width: 20px;
-                height: 20px;
+                width: 2rem;
+                height: 2rem;
                 border-radius: 50%;
-                border: 1.5px solid $color-white;
-                // background-color: $color-white;
+                border: $border-white;
             }
         }
     }
     &__team{
         position: absolute;
-        top: 409px;
-        padding: 0px 0px 4px;
-        border-bottom: 1px solid #FCFCFC;
+        top: 40.9rem;
+        padding: 0rem 0rem 0.4rem;
+        border-bottom: $border-white;
         cursor: pointer;
         &__btn{
             font-family: $font-primary;
             color: $color-white;
             font-weight: 500;
-            font-size: 20px;
-            line-height: 135%;
+            font-size: 2rem;
+            line-height: 1.35;
             background: none;
             border: none;
             cursor: pointer;
@@ -171,15 +141,15 @@
     }
     &__load-more{
         font-family: $font-primary;
-        font-size: 20px;
-        line-height: 24px;
+        font-size: 2rem;
+        line-height: 1.2;
         background:none;
         border: none;
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 8px;
-        padding-bottom: 32px;
+        gap: 0.8rem;
+        padding-bottom: 3.2rem;
         cursor: pointer;
         &__container{
             display: flex;
@@ -188,18 +158,14 @@
     }
 }
 .completed{
-    background: #74BE4F;
+    background: $color-completed;
 }
 .under-development{
-    background: #EBCF3C;
+    background: $color-in-progress;
 }
 .formation-of-the-team{
-    background: #EB903C;
+    background: $color-started;
 }
 .active{
     background-color: $color-white;
 }
-// .projects-section__form__button:hover .projects-section__form-submit__icon {
-//     fill: red;
-//     background-color: rebeccapurple;
-//   }
