--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,13 +7,13 @@
 @import 'layout/header';
 @import 'layout/slider';
 
-@import 'projectsSection/projectsSection'
+@import 'projectsSection/projectsSection';
   
 @import 'layout/statistic';
 @import 'layout/forms';
 @import 'layout/achievements';
 
 
-=======
+
 @import 'layout/reviews';
 
