--- a/src/scss/projectsSection/_projectsSection.scss
+++ b/src/scss/projectsSection/_projectsSection.scss
@@ -87,7 +87,7 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-            border: $border-gray;
+            border: $border-gray-light;
             border-radius: 0.4rem;
             
         }
