--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -93,6 +93,8 @@
     font-weight: 600;
     font-size: 2rem;
     padding-left: 1.2rem;
+    position: relative;
+    z-index: 2000;
 
     & span {
       display: inline-block;
