--- a/src/scss/layout/_partners.scss
+++ b/src/scss/layout/_partners.scss
@@ -34,7 +34,7 @@
     height:6.4rem;
     width:fit-content;
     border-style: none;
-    background-color: #fff;
+    background-color: $color-white;
     cursor: pointer;
     margin: 0 auto;
     display: block;
@@ -57,7 +57,7 @@
         display: inline-block;
         width: 100%;
         height: 0.1rem;
-        background-color: #121212;
+        background-color: $color-black;
         position: absolute;
         left: 0;
         bottom: 3.8rem;
