--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -4,10 +4,12 @@ $color-black: #121212;
 $color-black-light: #232323;
 $color-accent: #ffd210;
 $color-gray: #767676;
-$color-completed: #74BE4F;
-$color-in-progress: #EBCF3C;
-$color-started: #EB903C;
-
+$color-completed: #74be4f;
+$color-in-progress: #ebcf3c;
+$color-started: #eb903c;
+$color-neutral-text: #353535;
+$color-hover-btn: #ffbd00;
+$color-pressed-btn: #fd9b00;
 // FONTS
 $font-primary: 'Exo 2', sans-serif;
 $font-secondary: 'Inter', sans-serif;
@@ -17,3 +19,7 @@ $border-black: 1px solid $color-black;
 $border-gray: 1px solid $color-gray;
 $border-gray-light: 1px solid rgba(252, 252, 252, 0.5);
 $border-white: 1.5px solid $color-white;
+
+//MODAL
+$modal-backdrop-color: #ececec;
+$modal-window-color: #ffffff;
