--- a/src/scss/layout/_partners.scss
+++ b/src/scss/layout/_partners.scss
@@ -19,7 +19,7 @@
 
 .partner_item{
     width: calc((100% - 12.8rem) / 5);
-    height: 100px;
+    height: 10rem;
     background-color: #D9D9D9;
 
 }
