--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -177,7 +177,7 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    top: 77px;
+    top: 7.7rem;
     left: 0;
     background: $linear-gradient-black;
     transform: translateY(100%);
