fixed: replace px for rem

--- a/src/scss/layout/_modal.scss
+++ b/src/scss/layout/_modal.scss
@@ -42,13 +42,13 @@
     line-height: 1.2;
     color: $color-black;
     text-transform: uppercase;
-    margin-bottom: 8px;
+    margin-bottom: 0.8rem;
   }
   &__description {
     font-size: 2rem;
     line-height: 1.2;
     color: $color-neutral-text;
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
   }
 
   &__link {
