fix: styles and files structure

--- a/src/components/MainPage/Modal/styles.module.scss
+++ b/src/components/MainPage/Modal/styles.module.scss
@@ -1,4 +1,7 @@
+@import '../../../styles/abstracts/_variables.scss';
+
 .backdrop {
+  display: none; //To Do
   width: 100vw;
   height: 100vh;
   position: fixed;
@@ -11,6 +14,7 @@
 }
 
 .modal {
+  display: none; //To do
   width: 79.2rem;
   min-height: 67.8rem;
   padding: 10rem 6.8rem 9.8rem 6.8rem;
