--- a/src/components/MainPage/Reviews/styles.module.scss
+++ b/src/components/MainPage/Reviews/styles.module.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/abstracts/_variables.scss';
+
 .slick-list {
   overflow: hidden;
 }
@@ -69,12 +71,12 @@
 
   .slick-arrow.slick-prev {
     left: 0;
-    background: url('@img/left-arrow.svg') 0 0 / 100% no-repeat;
+    background: url('../../../assets/svg/left-arrow.svg') 0 0 / 100% no-repeat;
   }
 
   .slick-arrow.slick-next {
     right: 0;
-    background: url('@img/right-arrow.svg') 0 0 / 100% no-repeat;
+    background: url('../../../assets/svg/right-arrow.svg') 0 0 / 100% no-repeat;
   }
 
   .slick-dots {
