--- a/src/components/MainPage/Slider/styles.module.scss
+++ b/src/components/MainPage/Slider/styles.module.scss
@@ -1,3 +1,6 @@
+@import '../../../styles/abstracts/_variables.scss';
+@import '../../../styles/abstracts/_mixins.scss';
+
 .slider-section {
   position: relative;
 
