--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -106,15 +106,7 @@ a {
   }
 }
 */
-@import '../styles/abstracts/_variables.scss';
-@import '../styles/abstracts/mixins.scss';
-
-@import '../styles/base/typography.scss';
-@import '../styles/base/base.scss';
-/*
-@import '../styles/layout/error.scss';
-@import '../styles/layout/modal.scss';
-*/
+@import '../styles/styles.scss';
 
 h1,
 h2 {
