--- a/src/components/MainPage/Statistics/styles.module.scss
+++ b/src/components/MainPage/Statistics/styles.module.scss
@@ -1,5 +1,7 @@
+@import '../../../styles/abstracts/_variables.scss';
+
 .statistic {
-  background: url(@img/statBg.webp);
+  background: url('../../../assets/img/statBg.jpg');
   padding-top: 5.3rem;
   padding-bottom: 5.3rem;
   &__title {
