refactor: minor structure improvements

--- a/src/components/MainPage/Achievements/styles.module.scss
+++ b/src/components/MainPage/Achievements/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/abstracts/_variables.scss';
+@import '@/styles/abstracts/_variables.scss';
 
 .achievements {
   background: $color-accent;
