--- a/src/components/MainPage/Reviews/styles.module.scss
+++ b/src/components/MainPage/Reviews/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/abstracts/_variables.scss';
+@import '@/styles/abstracts/_variables.scss';
 
 .slick-list {
   overflow: hidden;
@@ -71,12 +71,12 @@
 
   .slick-arrow.slick-prev {
     left: 0;
-    background: url('../../../assets/svg/left-arrow.svg') 0 0 / 100% no-repeat;
+    background: url('~@/assets/svg/left-arrow.svg') 0 0 / 100% no-repeat;
   }
 
   .slick-arrow.slick-next {
     right: 0;
-    background: url('../../../assets/svg/right-arrow.svg') 0 0 / 100% no-repeat;
+    background: url('~@/assets/svg/right-arrow.svg') 0 0 / 100% no-repeat;
   }
 
   .slick-dots {
