--- a/src/components/MainPage/Footer/styles.module.scss
+++ b/src/components/MainPage/Footer/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/abstracts/_variables.scss';
+@import '@/styles/abstracts/_variables.scss';
 
 .footer {
   background-color: $color-black-light;
