--- a/src/components/MainPage/Forms/styles.module.scss
+++ b/src/components/MainPage/Forms/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/abstracts/_variables.scss';
+@import '@/styles/abstracts/_variables.scss';
 
 .forms {
   padding-top: 12rem;
