--- a/src/components/MainPage/Header/styles.module.scss
+++ b/src/components/MainPage/Header/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/abstracts/_variables.scss';
+@import '@/styles/abstracts/_variables.scss';
 
 .header {
   height: 10.4rem;
