--- a/src/components/MainPage/HeroSlider/styles.module.scss
+++ b/src/components/MainPage/HeroSlider/styles.module.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/abstracts/_variables.scss';
-@import '../../../styles/abstracts/_mixins.scss';
+@import '@/styles/abstracts/_variables.scss';
+@import '@/styles/abstracts/_mixins.scss';
 
 .slider-section {
   position: relative;
