--- a/src/components/MainPage/Partners/styles.module.scss
+++ b/src/components/MainPage/Partners/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/abstracts/_variables.scss';
+@import '@/styles/abstracts/_variables.scss';
 
 .partner {
   margin-top: 12rem;
