--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $color-white: #fcfcfc;
 $color-black: #121212;
 $color-black-light: #232323;
 $color-accent: #ffd210;
+$color-light-gray: #cecece;
 $color-gray: #767676;
 $color-completed: #74be4f;
 $color-in-progress: #ebcf3c;
