--- a/src/components/common/ProjectCard/styles.module.scss
+++ b/src/components/common/ProjectCard/styles.module.scss
@@ -1,1 +1,203 @@
 @import '../../../styles/abstracts/_variables.scss';
+.projects-section {
+  &__projects-item {
+    width: 37.8rem;
+    height: 46.4rem;
+    color: $color-white;
+    position: relative;
+    overflow: hidden;
+    padding: 2.4rem;
+    &__container {
+      position: absolute;
+      top: 21.8rem;
+      text-align: left;
+    }
+    &__content-container {
+      display: block;
+    }
+    &__title {
+      width: 33rem;
+      font-weight: 700;
+      font-size: 2.4rem;
+      line-height: 1;
+      text-align: left;
+      margin-bottom: 0.8rem;
+    }
+    &__link {
+      color: $color-white;
+      text-decoration: none;
+      text-align: left;
+    }
+    &__state-completed {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      background: $color-completed;
+    }
+    &__state-under-development {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      background: $color-in-progress;
+    }
+    &__state-formation-of-the-team {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      background: $color-started;
+    }
+    &__state-container {
+      width: 15.7rem;
+      padding: 0.8rem 0;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      border: $border-gray-light;
+      border-radius: 0.4rem;
+    }
+    &__state-container--formation {
+      width: 70%;
+      padding: 0.8rem 0;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      border: $border-gray-light;
+      border-radius: 0.4rem;
+    }
+  }
+  &__info {
+    position: absolute;
+    top: 31.3rem;
+    &__list {
+      display: flex;
+      flex-direction: column;
+      gap: 0.8rem;
+    }
+    &__list-item {
+      width: 33rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      &__icon {
+        width: 2.4rem;
+        height: 2.4rem;
+      }
+      &__level-container {
+        display: flex;
+        flex-direction: row;
+        gap: 0.4rem;
+      }
+      &__container {
+        display: flex;
+        flex-direction: row;
+        gap: 0.4rem;
+      }
+      &__level {
+        width: 2rem;
+        height: 2rem;
+        border-radius: 50%;
+        border: $border-white;
+        background: none;
+      }
+      &__level-active {
+        width: 2rem;
+        height: 2rem;
+        border-radius: 50%;
+        border: $border-white;
+        background-color: #fcfcfc;
+      }
+    }
+    &__list-container {
+      display: flex;
+      align-items: center;
+      gap: 0.4rem;
+    }
+  }
+  &__team {
+    position: absolute;
+    top: 40.9rem;
+    padding: 0rem 0rem 0.4rem;
+    border-bottom: $border-white;
+    cursor: pointer;
+    &__btn {
+      font-family: $font-primary;
+      color: $color-white;
+      font-weight: 500;
+      font-size: 2rem;
+      line-height: 1.35;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+  }
+}
+.thumb {
+  padding: 2.4rem 2.4rem 0;
+  color: var(--basic-color);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  //   top: 7.7rem;
+  top: 46.4rem;
+  left: 0;
+  background: $linear-gradient-black;
+  &__close-icon {
+    background: none;
+    border: none;
+    position: absolute;
+    right: 2.4rem;
+    top: 2.4rem;
+    cursor: pointer;
+  }
+  &__text-container {
+    width: 88%;
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 1.25;
+    text-align: left;
+    display: flex;
+    margin-bottom: 1.6rem;
+  }
+  &__container {
+    text-align: left;
+    overflow: auto;
+    width: 33rem;
+    height: 36.4rem;
+    position: relative;
+    cursor: pointer;
+    scrollbar-width: 0.8rem;
+    &__body {
+      cursor: auto;
+      &__title {
+        font-weight: 600;
+        font-size: 1.4rem;
+        line-height: 1.7rem;
+        margin-bottom: 0.4rem;
+      }
+      &__members {
+        display: flex;
+        flex-direction: column;
+        gap: 0.4rem;
+        margin-bottom: 1.6rem;
+      }
+      &__members a {
+        display: block;
+        font-weight: 400;
+        font-size: 1.4rem;
+        line-height: 1.7rem;
+        text-decoration-line: underline;
+        color: $color-accent;
+      }
+    }
+    &::-webkit-scrollbar {
+      width: 0.8rem;
+    }
+    &::-webkit-scrollbar-track {
+      background: $linear-gradient-white;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: $color-white;
+      border-radius: 0.4rem;
+    }
+  }
+}
