--- a/src/components/common/ProjectCard/ProjectCardContent/styles.module.scss
+++ b/src/components/common/ProjectCard/ProjectCardContent/styles.module.scss
@@ -1,5 +1,41 @@
 .projects-section {
   &__projects-item {
+    &__state-completed {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      background: $color-completed;
+    }
+    &__state-under-development {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      background: $color-in-progress;
+    }
+    &__state-formation-of-the-team {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      background: $color-started;
+    }
+    &__state-container {
+      width: 15.7rem;
+      padding: 0.8rem 0;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      border: $border-gray-light;
+      border-radius: 0.4rem;
+    }
+    &__state-container--formation {
+      width: 70%;
+      padding: 0.8rem 0;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      border: $border-gray-light;
+      border-radius: 0.4rem;
+    }
     &__container {
       position: absolute;
       top: 21.8rem;
@@ -7,6 +43,9 @@
     }
     &__content-container {
       display: block;
+    }
+    &__content-container--ishidden {
+      display: none;
     }
     &__title {
       width: 33rem;
